cookbooks/hades/infra/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "hades"
  labels:
    app.kubernetes.io/instance: "hades"
    app.kubernetes.io/name: "hades"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "hades"
      app.kubernetes.io/instance: "hades"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "hades"
        app.kubernetes.io/instance: "hades"
    spec:
      containers:
        - name: "hades"
          image: "zeusfyi/hercules:latest"
          volumeMounts:
            - mountPath: "/scripts"
              name: "cm-hades"
          imagePullPolicy: Always
          command: [ "/bin/sh" ]
          args: [ "-c","/scripts/start.sh" ]
          ports:
            - name: "http"
              containerPort: 8888
              protocol: "TCP"
          livenessProbe:
            httpGet:
              path: "/health"
              port: "http"
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: "/health"
              port: "http"
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 3
          resources:
            {}
      volumes:
        - name: cm-hades
          configMap:
            name: cm-hades
            defaultMode: 0744
      nodeSelector:
        {}
      affinity:
        {}
      tolerations:
        []
