cookbooks/hades/infra/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "hades"
  labels:
    app.kubernetes.io/instance: "hades"
    app.kubernetes.io/name: "hades"
    app.kubernetes.io/managed-by: "hades"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/instance: "hades"
    app.kubernetes.io/name: "hades"
