cookbooks/hades/infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "hades"
  namespace: "hades"
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: "nginx"
  tls:
    - secretName: hades-tls
      hosts:
        - api.hades.fyi
  rules:
    - host: api.hades.fyi
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hades
                port:
                  number: 80
